# swift-cmake-examples

3_bidirectional_cxx_interop/lib/fibonacci/: fibonacci.swift
3_bidirectional_cxx_interop/src/: fibonacci.cpp
3_cxx_Accelerate/: CMakeLists.txt  Readme.md
3_cxx_Accelerate/cmake/modules/: AddSwift.cmake
3_cxx_Accelerate/lib/accelerate/: CMakeLists.txt  accelerate.swift  solve.swift
3_cxx_Accelerate/src/: CMakeLists.txt  accelerate.cpp  discrete_authalic.cpp
